Added a file to find all emergency services in a nearby radius

--- a/testHTMLs/route.html
+++ b/testHTMLs/route.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Map Display with Route</title>
+  <title>Map with Route</title>
+  <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?key=Akg2tJWLm6UJu1jjM-aF_OGgQDkJC3xbDV6xgimSckEaBw-ShyHZrWE1MQm0J6o8"></script>
   <style>
-    /* Set the map and itinerary container to fill the screen */
     #map {
-      height: 60%;
       width: 100%;
-    }
-
-    #itineraryContainer {
-      height: 40%;
-      width: 100%;
-      overflow-y: auto;
-      padding: 10px;
+      height: 500px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
   <div id="itineraryContainer"></div>
-  <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?key=Akg2tJWLm6UJu1jjM-aF_OGgQDkJC3xbDV6xgimSckEaBw-ShyHZrWE1MQm0J6o8"></script>
   <script src="scriptroute.js"></script> <!-- Your custom JavaScript file -->
 </body>
 </html>
